--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,6 @@
+/backend/django_app/prediction/data/glove.6B.50d.txt filter=lfs diff=lfs merge=lfs -text
+install filter=lfs diff=lfs merge=lfs -text
+/backend/django_app/prediction/data/glove.6B.50d.txtgit filter=lfs diff=lfs merge=lfs -text
+lfs filter=lfs diff=lfs merge=lfs -text
+*.psd filter=lfs diff=lfs merge=lfs -text
 *.txt filter=lfs diff=lfs merge=lfs -text
